# gitka

./: .gitignore  Cargo.toml  README.md  astro.config.mjs  config-schema.toml  gitka-spec.md  install.sh  package-lock.json  package.json  sitemap.xml  spec.md  uninstall.sh
.github/workflows/: deploy.yml  release.yml
.opencode/agents/: gitka-dev.json  gitka-dev.md
docs/: cli-reference.md  configuration.md  features.md  index.md  installation.md  usage.md
public/: install-windows.ps1  install.sh
scripts/: install-windows.ps1  install.sh
src/: archive.rs  cli.rs  compress.rs  config.rs  dedup.rs  dirty.rs  encryption.rs  error.rs  main.rs  recovery.rs  repo.rs  serve.rs  source.rs  sync.rs  usb.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Footer.astro
src/content/docs/: index.mdx
src/content/docs/guides/: contributing.mdx  getting-started.mdx  installation.mdx  introduction.mdx  usage.mdx
src/content/docs/reference/: api-reference.mdx  architecture.mdx  binary-protocol.mdx  cli-reference.mdx  configuration.mdx  export-tiers.mdx  features.mdx
src/styles/: custom.css
ui/: app.js  index.html  style.css
